added histogram blending

--- a/config/dataset_config.json
+++ b/config/dataset_config.json
@@ -21,5 +21,8 @@
     "filters" :
     {
         "license_id" : [4, 5, 7]
+    },
+    "model" : {
+        "vocab_info" : "model/vocab-info.pickle"
     }
 }
