adding functionality to botr layers

--- a/config/generator_config.json
+++ b/config/generator_config.json
@@ -7,6 +7,16 @@
     "outputSize" : [512, 512],
     "ann_key" : "any",
     "multichannelColorMatching" : true,
+    "jpeg_quality" : 100,
+    "normalizeHistogram" : false,
+    "histogramChannelAxis" : -1,
+    "refLayerHistogram" : null,
+    "adaptiveHistogram" : true,
+    "adaptiveHistKernel" : null,
+    "adaptiveHistClip" : 0.2,
+    "descriptionModel" : "markov",
+    "restrictCorpus" : true,
+    "titleModel" : "default",
     "image_blending" : {
         "use_blending" : false,
         "pyr_kernel_size" : 5,
