advanced rendering functions to generate new nfts with target characteristics

--- a/config/generator_config.json
+++ b/config/generator_config.json
@@ -12,12 +12,14 @@
     "ann_key" : "any",
     "multichannelColorMatching" : true,
     "jpeg_quality" : 100,
+    "matchHistograms" : true,
     "normalizeHistogram" : false,
     "histogramChannelAxis" : -1,
     "refLayerHistogram" : null,
     "adaptiveHistogram" : true,
     "adaptiveHistKernel" : null,
     "adaptiveHistClip" : 0.2,
+    "showProgress" : true,
     "descriptionModel" : "markov",
     "restrictCorpus" : true,
     "titleModel" : "markov",
