cleanup, threading, stats

--- a/config/render_config.json
+++ b/config/render_config.json
@@ -3,14 +3,8 @@
     "proDilateKernel" : 3,
     "proDilateIter" : 2,
     "proKernel" : 5,
-    "avgPatchSize" : 0.1,
-    "avgPatchVariance" : 0.1,
-    "minPatchArea" : 0.001, 
-    "maxPatchArea" : 0.4, 
-    "targetFill" : 0.99,
-    "outputSize" : [256, 256],
-    "ann_key" : "any",
-    "multichannelColorMatching" : true,
+    "outputSize" : [512, 512],
+    "multichannelColorMatching" : -1,
     "jpeg_quality" : 100,
     "matchHistograms" : true,
     "normalizeHistogram" : true,
@@ -19,12 +13,9 @@
     "adaptiveHistogram" : true,
     "adaptiveHistKernel" : null,
     "adaptiveHistClip" : 0.7,
+    "batchRenderSize" : 8,
     "showProgress" : true,
-    "descriptionModel" : "markov",
-    "restrictCorpus" : true,
-    "titleModel" : "markov",
     "image_blending" : {
-        "use_blending" : false,
         "pyr_kernel_size" : 5,
         "pyr_kernel_sigma" : 1,
         "mask_kernel_size" : 5,
@@ -32,8 +23,14 @@
         "max_depth" : 5,
         "blur_masks" : true,
         "blur_iters" : 1,
-        "plot_levels" : false
+        "plot_levels" : false,
+        "blurMaskPre" : true,
+        "blurMaskPreIter" : 2,
+        "blurMaskPreKernel" : 7
     },
+    "descriptionModel" : "markov",
+    "restrictCorpus" : true,
+    "titleModel" : "markov",
     "allowedCategories" : [
         "ceiling",
         "appliance",
